add dependency-related properties to `Mod` object
